<resources>
    <string name="app_name">Green Basket</string>
    <string name="title_activity_sign_up">Personal Details</string>
    <string name="title_fragment_cartCheckout">Cart Items</string>
    <string name="title_widget">Green Basket</string>

    <string name="text_product_search">Search Products</string>
    <string name="text_product_category">Product Category</string>
    <string name="text_order_dialog_close">Close</string>
    <string name="text_add_to_cart">Add to cart</string>
    <string name="text_added_to_cart">Added to cart</string>


    <!--Edit text hits-->
    <string name="hint_name">Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_pinCode">Pin Code</string>
    <string name="hint_mobile_number">Mobile Number</string>

    <!--messages-->
    <string name="message_checkout_success">Orders Placed</string>
    <string name="message_checkout_error">Checkout error</string>
    <string name="message_duplicate_orders">Duplicate Orders Not Allowed</string>
    <string name="message_empty_cart">Cart is empty</string>
    <string name="message_empty_orderHistory"> No Orders Placed Yet !\nSwipe down to refresh</string>

    <string name="error_registration">Failed To Register</string>
    <string name="error_not_signed_in">You must sign in to use this app</string>
    <string name="error_empty_field">Empty Field Not Allowed</string>
    <string name="error_mobile_digit">Mobile number should be of 10 digits</string>
    <string name="error_picCode_digit">Pin Code should be of 6 digits</string>
    <string name="error_not_registered">You must submit user details</string>
    <string name="error_getting_products">Product service error</string>
    <string name="error_empty_product_list">Empty list! Swipe down to refresh</string>

    <string name="action_retry">Retry</string>
    <string name="menu_show_user_details">My Profile</string>
    <string name="menu_order_history">Order History</string>

    <!--content description-->
    <string name="desc_product_image">Product Image</string>
    <string name="desc_app_logo">App logo</string>
    <string name="desc_form_icon">User form icon</string>
    <string name="desc_button_volume_up">Increase product volume for this item</string>
    <string name="desc_button_volume_down">Decrease Product Volume for this item</string>
    <string name="desc_button_cart_remove_item">Remove this item from cart</string>
    <string name="desc_button_cart_add_item">Add this item to cart</string>
    <string name="desc_fab_open_cart">Floating action button open cart</string>
    <string name="desc_fab_checkout_cart">Floating action button place order for cart items</string>
    <string name="desc_fab_update_user_info">Floating action button update user information</string>
    <!--default values-->
    <string name="volume_set_quantity">6</string>
    <string name="volume_set_weight">250</string>

    <string name="volume_max_quantity">48</string>
    <string name="volume_max_weight">5000</string>
</resources>
