<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/product_item_view_padding">

        <ImageView
            android:id="@+id/item_product_image"
            android:layout_width="@dimen/product_item_icon_size"
            android:layout_height="@dimen/product_item_icon_size"
            android:contentDescription="@string/desc_product_image"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_photo_default"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/product_item_view_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_product_name"
                    style="@style/TextStyle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textSize="@dimen/product_item_name_textSize"
                    tools:text="Lady Finger"/>

                <TextView
                    android:id="@+id/item_product_price"
                    style="@style/TextStyle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/product_item_price_textSize"
                    tools:text="​1.25 kg is ₹ 150"/>
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/item_product_volume_controls"
                android:layout_width="@dimen/volume_control_width"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageButton
                    android:id="@+id/item_product_volume_subtract_button"
                    android:layout_width="@dimen/image_button_icon_size"
                    android:layout_height="@dimen/image_button_icon_size"
                    android:layout_alignParentStart="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/desc_button_volume_down"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_remove_circle_outline"/>

                <TextView
                    android:id="@+id/item_product_volume"
                    style="@style/TextStyle"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/darkGrey"
                    android:textSize="@dimen/product_item_volume_textSize"
                    tools:text="0.25 kg"/>

                <ImageButton
                    android:id="@+id/item_product_volume_add_button"
                    android:layout_width="@dimen/image_button_icon_size"
                    android:layout_height="@dimen/image_button_icon_size"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/desc_button_volume_up"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_add_circle_outline"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/item_product_checkbox"
        style="@style/FloatingControls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:contentDescription="@string/desc_button_cart_add_item"/>
</FrameLayout>