<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/container_userInfo_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.greentopli.app.user.ui.UserInfoActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:theme="@style/Toolbar"/>

    </android.support.design.widget.AppBarLayout>

    <ProgressBar
        android:id="@+id/progressbar_signUp_activity"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:visibility="gone"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_userInfo_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_done"
        android:tint="@color/cardview_light_background"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_width="@dimen/activity_userInfo_content_max_width"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/user_avatar"
                android:src="@drawable/ic_person"
                android:tint="@color/cardview_dark_background"
                android:layout_width="@dimen/user_avatar_size"
                android:layout_height="@dimen/user_avatar_size"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_userInfo_content_top_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:stretchColumns="1">

                <TableRow>

                    <ImageView
                        style="@style/UserInfoFormIconStyle"
                        android:src="@drawable/ic_person"/>

                    <EditText
                        style="@style/UserInfoFormEditTextStyle"
                        android:id="@+id/user_name_editText"
                        android:hint="@string/hint_name"
                        android:inputType="textPersonName"/>
                </TableRow>

                <TableRow>

                    <ImageView
                        style="@style/UserInfoFormIconStyle"
                        android:src="@drawable/ic_location"/>

                    <EditText
                        style="@style/UserInfoFormEditTextStyle"
                        android:id="@+id/user_address_editText"
                        android:hint="@string/hint_address"
                        android:inputType="textPostalAddress"/>
                </TableRow>

                <TableRow>

                    <View
                        style="@style/UserInfoFormIconStyle"/>

                    <EditText
                        style="@style/UserInfoFormEditTextStyle"
                        android:id="@+id/user_pinCode_editText"
                        android:hint="@string/hint_pinCode"
                        android:inputType="number"/>
                </TableRow>

                <TableRow>

                    <ImageView
                        style="@style/UserInfoFormIconStyle"
                        android:src="@drawable/ic_call"/>

                    <EditText
                        style="@style/UserInfoFormEditTextStyle"
                        android:id="@+id/user_mobileNo_editText"
                        android:hint="@string/hint_mobile_number"
                        android:inputType="number"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
